package com.glqdlt.pm6.api.model.authority;

public interface GrantedAuthority {
    String getAuthority();
}
