@startuml


interface GrantedAuthority{
    +getAuthority() : String
}

interface Pm6GrantedAuthority extends GrantedAuthority{
    +getType() : Integer
}

class SimpleTextAuthority{

    - authority : String
    + getAuthority() : String
    + getType() : Integer

}

class RoleBaseAuthority{
    -role : String
    +getRole() : String
    +getAuthority() : String
    + getType() : Integer
}

Pm6GrantedAuthority <|.. RoleBaseAuthority
Pm6GrantedAuthority <|.. SimpleTextAuthority
@enduml